--- a/scribble/templates/answer.html
+++ b/scribble/templates/answer.html
@@ -4,17 +4,17 @@ Answer
 {% endblock %}
 {% block body %}
 <div class='container mt-5'>
-<div class='alert alert-info'>
-	<h2>{{ans.name}} </h2>
-	<p> Ok {{ans.name}}, lets see who did you meet and who didn't. <p>
-	<p>{{ans.predictions}} <p>
-	
-	{%for i in ans.img[:-1].split(',')%}
-		<p style="margin-bottom:-15px;"><center><samp>{{i[2:-1]}}</samp></center></p>
-	
-	{%endfor%}
-	<p>Anyway - dont take it pesonaly, it`s only a toilet joke. But remember - love makes the world go round, love each other!<p>
+	<div class='alert alert-info'>
+		<h2>{{ans.name}} </h2>
+		<p> Ok {{ans.name}}, lets see who did you meet and who didn't. <p>
+		<p>{{ans.predictions}} <p>
+
+		{%for i in ans.img[:-1].split(',')%}
+			<p style="margin-bottom:-15px;"><center><samp>{{i[2:-1]}}</samp></center></p>
+
+		{%endfor%}
+		<p>Anyway - dont take it pesonaly, it`s only a toilet joke. But remember - love makes the world go round, love each other!<p>
+	</div>
 </div>
 	<center><a class='btn btn-warning' href='/you'>One more prediction?</a></center>
 {% endblock %}
-
