--- a/scribble/templates/base.html
+++ b/scribble/templates/base.html
@@ -5,15 +5,15 @@
   <meta name="Zhenya_Vo" content="SitePoint">
   <title>{% block title %}{% endblock %}</title>
   <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css'>
+  <link rel="stylesheet" href="static/style.css" type="text/css"/>
 </head>
+<body class="background">
 
-<body background = "http://112.r.photoshare.ru/01126/00abead7d76e03d948327c2568181c90d05f6a74.jpg"  align="center" width="250" height="150">
-	<center><h1 style="color:DarkOrange;">Mr. Fortune Teller</h1></center>	
-	
+	<center><h1 id="signboard">Mr. Fortune Teller</h1></center>
 
 	<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
 		<h5 class="my-0 mr-md-auto font-weight-normal">Total predictions - {{count}}</h5>
-	  <nav class="my-2 my-md-0 mr-md-3">
+	    <nav class="my-2 my-md-0 mr-md-3">
 		<a class="p-2 text-dark" href="/">Start</a>
 		<a class="p-2 text-dark" href="/predictions">All Predictions</a>
 		<a class="p-2 text-dark" href="/gallery">Gallery</a> 
@@ -26,4 +26,6 @@
 
 	{% block body %}{% endblock %}
 </body>
+
 </html>
+
