--- a/scribble/templates/fail.html
+++ b/scribble/templates/fail.html
@@ -1,4 +1,8 @@
-<body background=https://douggrady.com/wp-content/uploads/2019/08/fail.jpg align="center">
+<style>
+body {
+  background-image: url('static/img/Fail.jpg');
+}
+</style>	
 	<center><h1><a href='/login' class='btn btn-success'>Try again</a></h1></center>	
 </body>
 
