--- a/scribble/templates/you.html
+++ b/scribble/templates/you.html
@@ -4,7 +4,7 @@ Your device
 {% endblock %}
 {% block body %}
 <div class='container mt-3'>
-	<h1 style="color:DarkOrange;"> Two questions: </h1>
+	<h1 id="signboard"> Two questions: </h1>
 	<form method = 'post' >
 		<input type='text' name='name' id='title' class='form-control' placeholder = 'Your Name'><br>
 		<input type='text' name='size' id='title' class='form-control' placeholder = 'Enter the size of your genital in cm. If you are boy positivre number, if you are girl negative'><br>
