--- a/scribble/templates/fail.html
+++ b/scribble/templates/fail.html
@@ -1,8 +1,4 @@
-<style>
-body {
-  background-image: url('static/img/Fail.jpg');
-}
-</style>	
+<body class="back_fail">
 	<center><h1><a href='/login' class='btn btn-success'>Try again</a></h1></center>	
 </body>
 
