--- a/scribble/templates/predictions.html
+++ b/scribble/templates/predictions.html
@@ -4,7 +4,7 @@ Base
 {% endblock %}
 {% block body %}
 <div class='container mt-5'>
-	<h1 style="color:DarkOrange;"> All predictions </h1>
+	<h1 id="signboard"> All predictions </h1>
 
 	{% if predictions|length > 0 %}
 		{% for i in predictions %}
@@ -13,12 +13,12 @@ Base
 				<p>{{i.predictions}}</p>
 				<p><b>{{ i.date.date() }}</b></p>
 				{%for i in i.img[:-1].split(',')%}
-					<p style="margin-bottom:-15px;"><center><samp>{{i[2:-1]}}</samp></center></p>
+					<p id="string_pad"><center><samp>{{i[2:-1]}}</samp></center></p>
 				{%endfor%}
 			</div>
 		{% endfor %}
 	{% else %}
-		<p><h5 style="color:DarkOrange;">No predictions yet</h5></p>
+		<p><h5 id="signboard">No predictions yet</h5></p>
 	{% endif %}
 </div>
 {% endblock %}
