--- a/scribble/templates/answer.html
+++ b/scribble/templates/answer.html
@@ -2,7 +2,7 @@
 {% block title %}
 Answer
 {% endblock %}
-{% block body %}:q
+{% block body %}
 
 <div class='container mt-5'>
 	<div class='alert alert-info'>
