--- a/scribble/templates/error.html
+++ b/scribble/templates/error.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}
-Firs of All
+First of All
 {% endblock %}
 {% block body %}
 	<center><a class='btn btn-warning' href='/you'>{{comment}}</a></center>
