--- a/scribble/templates/base.html
+++ b/scribble/templates/base.html
@@ -19,10 +19,10 @@
 		<a class="p-2 text-dark" href="/">Start</a>
 		<a class="p-2 text-dark" href="/predictions">All Predictions</a>
 		<a class="p-2 text-dark" href="/gallery">Gallery</a> 
-		{% if admin ==None %}
-			<a class="p-2 text-dark" href="/login">Login</a>
+		{% if current_user.is_authenticated %}
+			<a class="p-2 text-dark" href="{{ url_for('auth.logout') }}">Sign Out</a>
 		{% else %}
-			<a class="p-2 text-dark" href="/admin">{{admin}}</a>
+			<a class="p-2 text-dark" href="{{ url_for('auth.login') }}">Sign In</a>
 		{% endif %}
 	</div>
 
