--- a/scribble/templates/gallery.html
+++ b/scribble/templates/gallery.html
@@ -8,25 +8,27 @@ Genitals
 		<a href='/answer/{{smollest}}' class='btn btn-success'>Smallest</a>
 	</center>
 {% for person, sex in all_persons.items() %}
-	{% if sex =='girl' %}
-		<div class="left_side_gallery">
+	<div class="box">
+
+			<div>
 			{% for pict in person.img[:-1].split(',') %}
 					<h5 id="left_color"><p id="string_pad"><samp>{{pict[2:-1]}}</samp></p></h5>
 			{% endfor %}
 			<h1 id="rigth_color" >{{person.name}} </h1>
 			<p style="margin-bottom: 20px;"></p>
 			</div>
-	{% endif %}
-	{% if sex =='boy' %}
-		<div class="right_side_gallery">
+
+			<div>
 			{% for pict in person.img[:-1].split(',') %}
 					<h5 id="rigth_color"><p id="string_pad"><samp>{{pict[2:-1]}}</samp></p></h5>
 			{% endfor %}
-			<h1 id="left_color" >{{person.name}} </h1>
-			<p id="pict_pad"></p>
+			<h1 id="left_color" >{{person.name}} {{sex[1]*4}}</h1>
+			<p style="margin-bottom: 20;"></p>
 			</div>
-	{% endif %}
+
+	</div>
 {% endfor %}
+
 {% else %}
 	<p><h5 id="signboard"> No predictions yet</h5></p>
 {% endif %}
