turn on admin auth

--- a/scribble/templates/admin/index.html
+++ b/scribble/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'admin/master.html' %}
 {% block body %}
 <h1> {{comment}} </h1>
-<a href='/logout' class='btn btn-success'>Logout and Start page</a>
-<p></p>
+<p><a href='/login' class='btn btn-success'>Log in</a></p>
+<p><a href='/logout' class='btn btn-success'>Logout and Start page</a></p>
 <p><a href='/start' class='btn btn-success'>Start page</a></p>
 {% endblock body %}
