--- a/scribble/templates/answer.html
+++ b/scribble/templates/answer.html
@@ -8,8 +8,7 @@ Answer
 	<div class='alert alert-info'>
 		<h2>{{ans.name}} </h2>
 		<p> Ok {{ans.name}}, lets see who did you meet and who didn't. <p>
-		<p>{{ans.prologue}} <p>
-
+		<p>{{ans.prologue}} {{ans.occasion.comment}}<p>
 		{%for i in ans.img[:-1].split(',')%}
 			<p id="string_pad"><center><samp>{{i[2:-1]}}</samp></center></p>
 
