--- a/scribble/templates/gallery.html
+++ b/scribble/templates/gallery.html
@@ -8,7 +8,10 @@ Genitals
 		<a href='/answer/{{smollest}}' class='btn btn-success'>Smallest</a>
 	</center>
 {% else %}
-	<p><h5 id="signboard"> No predictions yet</h5></p>
+	<div class='container mt-5'>
+		<h1 id="signboard"> Gallery </h1>
+		<p><h5 id="signboard">No predictions yet</h5></p>
+	</div>
 {% endif %}
 <div class='some-page-wrapper'>
 	{% for pair in ans %}
